# php2wasm

./: .gitignore  CMakeLists.txt  README.md  package.json
examples/: cli-args.php  hello.php
examples/templates/: index.php
examples/worker/: index.js  index.php
src/: main.c
src/extensions/: extension_manager.c  extension_manager.h
src/extensions/curl/: curl_polyfill.c
src/php/: php_engine.c  php_engine.h  php_memory.c  php_parser.c  php_variables.c
src/wasi/: wasi_fs.c  wasi_io.c  wasi_shim.c  wasi_shim.h
tests/: run_tests.sh  test_expected_output.txt  test_functions.php  test_hello.php
tools/: php2wasm
